# pdf-fmt

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build.py  config.py  core.py  main.py  old_parser.py  output.md  parser.py  patterns.yaml  pdf-fmt.py  pdf-fmt.yaml  pdf2image.py  pyproject.toml  requirements-ci.txt  requirements.txt  startup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-security-report.md
.github/workflows/: push_tag_event.json  release.yml
pdf_fmt/: __init__.py  main.py
pdf_fmt/config/: __init__.py
pdf_fmt/conversion/: __init__.py
pdf_fmt/core/: __init__.py
pdf_fmt/formatting/: __init__.py
pdf_fmt/image/: __init__.py
pdf_fmt/parser/: __init__.py
pdf_fmt/processing/: __init__.py
pdf_fmt/spell/: __init__.py
pdf_fmt/startup/: __init__.py
scripts/: act.sh  compile.sh  dev.sh  install.ps1  install.sh  run.sh  setup.sh  tests.sh  version.sh
tests/: test_core.py  test_parser.py
