[project]
name = "pdf-fmt"
version = "0.6.1"
description = "A PDF Text Extractor, Processor, and Formatter."
authors = [
  {name = "bladeacer", email = "wg.nick.exe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
  "pyyaml",
  "pdfplumber",
  "pyperclip",
  "breame",
  "Pillow",
  "imagehash"
]

[project.urls]
Repository = "https://github.com/bladeacer/pdf-fmt"

[dependency-groups]
build = [
  "nuitka"
]

[tool.uv]
