[project]
name = "pdf-fmt"
version = "0.7.2"
description = "A PDF Extractor, Processor, and Formatter. Supports regex based exclusions and other niceties."
authors = [
  {name = "bladeacer", email = "wg.nick.exe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
  "pyyaml",
  "pdfplumber",
  "pyperclip",
  "breame",
  "Pillow"
]

[project.urls]
Repository = "https://github.com/bladeacer/pdf-fmt"

[project.scripts]
pdf-fmt = "pdf_fmt.main:main"

[dependency-groups]
build = [
  "nuitka"
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
